# ssm-term-rs

./: Cargo.toml  LICENSE
aws/: Cargo.toml
aws/src/message/: client_message.rs
client/: Cargo.toml
client/src/: helpers.rs  main.rs  ssm.rs  structs.rs
client/src/models/: channel_closed.rs  output_stream_data.rs
session_manager/: Cargo.toml
session_manager/src/: lib.rs
session_manager/src/communicator/: mod.rs  web_sockets_channel.rs
session_manager/src/config/: config.rs  mod.rs
session_manager/src/data_channel/: streaming.rs
session_manager/src/encryption/: encrypter.rs  kms_service.rs  mod.rs
session_manager/src/message/: client_message.rs  handshake_message.rs  message_parser.rs  mod.rs
session_manager/src/service/: service.rs
session_manager/src/session_manager_plugin/: session.rs
src/: enums.rs  helpers.rs  main.rs  ssm.rs  structs.rs
src/models/: channel_closed.rs  mod.rs  output_stream_data.rs  pause_publication.rs  start_publication.rs
