[package]
name = "ssm-term-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.14"
sha2 = "0.10"
uuid = { version = "1.7", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
tokio = { version = "1.36", features = ["full"] }
tokio-websockets = { version = "0.5", features = ["native-tls", "simd", "client", "ring", "fastrand"] }
futures-util = { version = "0.3", features = ["sink"] }
bytes = "1.5.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
crossterm = "0.27"
